--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ header {
 .main--content {
   margin: 0;
   padding: 0;
-  min-height: 300px;
+  height: 65vh;
 }
 
 footer {
@@ -103,20 +103,55 @@ footer {
 /* Main section styles */
 
 .main--content {
-
+  background-color: red;
 }
 
 .main--left {
+  height: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: bisque;
+}
 
+.main--left div {
+  margin: 0px 0 0 20px;
+  border-left: 3px solid darkgrey;
+}
+
+.main--left h3 {
+  margin: 30px 0 0 10px;
+  display: block;
+}
+
+.main--left hr {
+  height: 2px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: block;
+  color: rgba(0,0,0,0.1);
+}
+
+.main--left h4 {
+  margin: 10px 0 10px 10px;
+  display: block;
 }
 
 .main--right {
+  height: 100%;
   background-color: brown;
 }
 
 
 /* Footer styles */
+
+#footer-holder {
+  height: 30px;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
 
 .footer--full {
   position: fixed;
